# jaxknn

./: LICENSE  README.md  pyproject.toml
notebooks/: benchmarks.ipynb  demo.ipynb
src/jaxknn/: cuda_kdtree.py  jax_kdtree.py  onedee.py  scipy_kdtree.py  utils.py
tests/: common.py  test_cuda_kdtree.py  test_knn_1d.py  test_scipy_kdtree.py
